--- a/src/app/components/shared/order/order.component.css
+++ b/src/app/components/shared/order/order.component.css
@@ -1,5 +1,6 @@
 .container {
   position: relative;
+  margin-left: 1.11rem;
   top: 7rem;
   height: calc(100% - 7rem);
   width: 100%;
@@ -7,7 +8,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  justify-content: center;
+}
+
+tbody {
+  text-align: center;
 }
 
 h1 {
@@ -43,14 +47,18 @@ h1 {
   justify-content: center;
 }
 
-.confirm-button {
-  background-color: #0BB9F0;
-  color: whitesmoke;
+.confirm-button,
+.modify-button {
   border-radius: 7.7%;
   padding: 0.5rem 1rem;
   cursor: pointer;
   font-size: 1.11rem;
   margin: 1.11rem;
+}
+
+.confirm-button {
+  background-color: #0BB9F0;
+  color: whitesmoke;
 }
 
 .confirm-button:hover {
@@ -60,11 +68,6 @@ h1 {
 .modify-button {
   background-color: #FF4080;
   color: whitesmoke;
-  border-radius: 7.7%;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-  font-size: 1.11rem;
-  margin: 1.11rem;
 }
 
 .modify-button:hover {
@@ -78,4 +81,59 @@ h1 {
   gap: 1.11rem;
   margin-top: 1.11rem;
   padding-top: 1.11rem;
+}
+
+/* Media query for tablet devices */
+@media screen and (max-width: 888px) {
+  .container {
+    margin-left: 0.5rem;
+    top: 5rem;
+  }
+
+  .cart-table th,
+  .cart-table td {
+    padding: 0.5rem;
+  }
+
+  .product-image {
+    width: 50px;
+    height: 50px;
+  }
+
+  .confirm-button,
+  .modify-button {
+    font-size: 0.9rem;
+    padding: 0.4rem 0.8rem;
+    margin: 0.5rem;
+  }
+}
+
+/* Media query for mobile devices */
+@media screen and (max-width: 480px) {
+  .container {
+    margin-left: 0.3rem;
+    top: 4rem;
+  }
+
+  h1 {
+    font-size: medium;
+    margin-bottom: 0.5rem;
+  }
+
+  .cart-table th,
+  .cart-table td {
+    padding: 0.3rem;
+  }
+
+  .product-image {
+    width: 40px;
+    height: 40px;
+  }
+
+  .confirm-button,
+  .modify-button {
+    font-size: 0.8rem;
+    padding: 0.3rem 0.6rem;
+    margin: 0.3rem;
+  }
 }
