set up release-latest-items for the next versions

--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -7,7 +7,7 @@
     <!-- Desktop menu -->
     <div class="menu">
       <button mat-button routerLink="/items/books">Articles</button>
-      <button mat-button routerLink="/promos">Promos</button>
+      <button mat-button routerLink="/items/books/promos">Promos</button>
       <button mat-button routerLink="/items/books/new">Nouveautés</button>
       <button mat-button routerLink="/comments">Avis</button>
     </div>
