implemented new items pages from year 2019

--- a/src/app/components/section/item/detail-item/detail-item.component.html
+++ b/src/app/components/section/item/detail-item/detail-item.component.html
@@ -44,7 +44,7 @@
       <button
         class="items-back-button"
         mat-raised-button
-        (click)="goBackToListItems()"
+        (click)="goBackToPreviousPage()"
       >
         Retour aux articles
       </button>
