--- a/src/app/pages/release/release-latest/release-latest-page.component.html
+++ b/src/app/pages/release/release-latest/release-latest-page.component.html
@@ -4,7 +4,7 @@
     style="margin-right: 2.2rem"
   >
     <div *ngFor="let item of newItemList$ | async">
-      <mat-card class="custom-card">
+      <mat-card class="custom-card" (click)="openItemDetails(item)">
         <img
           mat-card-image
           [src]="item.imageUrl"
@@ -43,15 +43,4 @@
       </mat-card>
     </div>
   </div>
-  <mat-paginator
-    [length]="totalItems$ | async"
-    [pageSize]="itemsPerPage"
-    [pageSizeOptions]="[12, 24, 36, 48]"
-    [pageIndex]="getCurrentPageIndex()"
-    (page)="onPageChange($event)"
-    [showFirstLastButtons]="true"
-    intlNextPageLabel="Page suivante"
-    intlPreviousPageLabel="Page précédente"
-    intlItemsPerPageLabel="Articles par page"
-  ></mat-paginator>
 </div>
