--- a/src/app/components/admin/admin-item/admin-item.component.css
+++ b/src/app/components/admin/admin-item/admin-item.component.css
@@ -6,6 +6,8 @@ body {
   max-width: 600px;
   margin: 0.44rem auto;
   text-align: center;
+  top: 7rem;
+  height: calc(100% - 7rem);
 }
 
 .mat-card-actions.button-row {
@@ -47,4 +49,10 @@ form {
   display: flex;
   align-items: center;
   padding: 0.44em 0;
+}
+
+@media screen and (max-width: 888px) {
+  .mat-card {
+    top: 22rem;
+  }
 }
