--- a/src/app/components/shared/aside-cart/cart/cart.component.css
+++ b/src/app/components/shared/aside-cart/cart/cart.component.css
@@ -10,6 +10,7 @@ h1 {
 .cart-table {
   width: 100%;
   border-collapse: collapse;
+  text-align: center;
 }
 
 .cart-table th,
@@ -69,8 +70,7 @@ h1 {
 .checkout-section {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  gap: 1.11rem;
+  justify-content: space-around;
   margin-top: 1.11rem;
   padding-top: 1.11rem;
 }
