--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -9,7 +9,7 @@
       <button mat-button routerLink="/items/books">Articles</button>
       <button mat-button routerLink="/items/books/new">Nouveautés</button>
       <button mat-button routerLink="/items/books/promos">Soldes</button>
-      <button mat-button routerLink="/comments">Avis</button>
+      <button mat-button routerLink="/items/books/comments">Avis</button>
     </div>
 
     <!-- Search bar -->
@@ -23,9 +23,9 @@
     </button>
 
     <div class="nav-actions">
-      <!-- Customer account drawer -->
-      <app-account-customer-drawer (click)="toggleAccountCustomerDrawer()">
-      </app-account-customer-drawer>
+      <!-- User account drawer -->
+      <app-account-user-drawer (click)="toggleAccountUserDrawer()">
+      </app-account-user-drawer>
 
       <!-- Cart drawer for shopping -->
       <app-aside *ngIf="!isAdmin" (click)="toggleCartDrawer()"></app-aside>
