updated wording for accountuser drawer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
     <button mat-icon-button (click)="closeAccountUserDrawer()">
       <mat-icon>close</mat-icon>
     </button>
-    <app-account-user></app-account-user>
+    <app-account-user-drawer></app-account-user-drawer>
   </mat-sidenav>
 
   <mat-sidenav-content>
