--- a/src/app/components/shared/aside-account-user/account-user-drawer/account-user-drawer.component.html
+++ b/src/app/components/shared/aside-account-user/account-user-drawer/account-user-drawer.component.html
@@ -1,18 +1,18 @@
 <div class="container">
   <div class="drawer-item" routerLink="user/account/profile">
     <mat-icon>person</mat-icon>
-    Mon profil
+    <span class="drawer-item-text">Mon profil</span>
   </div>
   <div class="drawer-item" (click)="openOrdersPage()">
     <mat-icon>shopping_cart</mat-icon>
-    Mes commandes
+    <span class="drawer-item-text">Mes commandes</span>
   </div>
   <div class="drawer-item" routerLink="user/account/favorites">
     <mat-icon>favorite</mat-icon>
-    Mes favoris
+    <span class="drawer-item-text">Mes favoris</span>
   </div>
   <button class="logout-button">
     <mat-icon>exit_to_app</mat-icon>
-    Déconnexion
+    <span class="drawer-item-text">Déconnexion</span>
   </button>
 </div>
