--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -24,6 +24,12 @@ app-nav {
   z-index: 1000;
 }
 
+@media (max-width: 1111px) {
+  .sidenav-cart  {
+    width: 55%;
+  }
+}
+
 @media (max-width: 888px) {
   .sidenav-cart  {
     width: 100%;
