--- a/src/app/components/shared/order/order-list/order-list.component.css
+++ b/src/app/components/shared/order/order-list/order-list.component.css
@@ -1,24 +1,46 @@
 .container {
-  position: fixed;
-  top: 7rem;
-  height: calc(100% - 7rem);
+  margin-top: 7rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: 2rem;
+}
+
+.status-selector {
+  text-align: center;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+td {
+  text-align: center;
+}
+
+.td-details {
+  text-decoration: underline;
+}
+
+.td-details:hover {
+  cursor: pointer;
+  text-decoration: underline;
+  background-color:  rgba(33, 150, 243, 0.33);
 }
 
 .order-list {
   width: 100%;
-  margin: 0.5rem 0;
+  margin: 1rem 0;
   border-collapse: collapse;
 }
 
-.order-list th, .order-list td {
+.order-list th,
+.order-list td {
   padding: 0.5rem;
   text-align: left;
   border-bottom: 1px solid #ddd;
+}
+
+.order-list th {
+  background-color: #f5f5f5;
 }
 
 .order-item-expanded {
