displayed orders linked by status

--- a/src/app/components/shared/order/order-list/order-list.component.css
+++ b/src/app/components/shared/order/order-list/order-list.component.css
@@ -22,8 +22,7 @@ td {
 
 .td-details:hover {
   cursor: pointer;
-  text-decoration: underline;
-  background-color:  rgba(33, 150, 243, 0.33);
+  text-decoration-color: #2096F3;
 }
 
 .order-list {
