--- a/src/app/components/shared/aside-account-user/account-user-drawer/account-user-drawer.component.css
+++ b/src/app/components/shared/aside-account-user/account-user-drawer/account-user-drawer.component.css
@@ -25,11 +25,13 @@
 
 .drawer-item mat-icon {
   margin-right: 1.11rem;
-  color: #2196F3;
+  color: #0BB9F0;
+  filter: drop-shadow(3px 3px 3px rgba(255, 64, 127, 0.44));
 }
 
 .drawer-item mat-icon:hover {
   color: #FF4080;
+  filter: drop-shadow(3px 3px 3px rgba(32, 150, 243, 0.44));
 }
 
 .logout-button {
