displayed and updated status by order via order store

--- a/src/app/components/shared/order/order-list/order-list.component.html
+++ b/src/app/components/shared/order/order-list/order-list.component.html
@@ -50,7 +50,13 @@
             <td *ngIf="isAdmin">
               <select
                 #orderStatusSelectRef
-                (change)="getStatusByOrderNumber(order.orderNumber)"
+                (change)="
+                  updateOrderStatus(
+                    currentUser,
+                    order.orderNumber,
+                    orderStatusSelectRef.value
+                  )
+                "
               >
                 <option value="PENDING">En attente de confirmation</option>
                 <option value="CONFIRMED">Confirmé</option>
