--- a/src/app/components/shared/aside-account-user/account-user-drawer/account-user-drawer.component.html
+++ b/src/app/components/shared/aside-account-user/account-user-drawer/account-user-drawer.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="drawer-item" routerLink="user/account/profile">
+  <div class="drawer-item" (click)="openProfilePage()">
     <mat-icon>person</mat-icon>
     <span class="drawer-item-text">Mon profil</span>
   </div>
@@ -7,7 +7,7 @@
     <mat-icon>shopping_cart</mat-icon>
     <span class="drawer-item-text">Mes commandes</span>
   </div>
-  <div class="drawer-item" routerLink="user/account/favorites">
+  <div class="drawer-item" (click)="openFavoritesPage()">
     <mat-icon>favorite</mat-icon>
     <span class="drawer-item-text">Mes favoris</span>
   </div>
